create line figure

--- a/src/markdown/mas/data_verkenning_2018_2023.Rmd
+++ b/src/markdown/mas/data_verkenning_2018_2023.Rmd
@@ -1259,15 +1259,19 @@ ggsave(here(media_folder,
 Proporties binnen telcirkels:
 
 ```{r}
+palette <- colorRampPalette(RColorBrewer::brewer.pal(9, name = 'Set1'))(length(unique(mas_vogels$plotnaam)))
+
 p <- mas_vogels %>%
   distinct(plotnaam, jaar, regio, sbp, openheid, stratum, area_prop_sb) %>%
   ggplot() +
     geom_boxplot(aes(x = factor(jaar), y = area_prop_sb)) +
+    geom_line(aes(x = factor(jaar), y = area_prop_sb, group = plotnaam,
+                  colour = plotnaam), alpha = 0.2) +
     facet_wrap(~regio) +
-    labs(x = "", y = "Proportie soorbeschermingsmaatregelen") +
-    theme(legend.position = "bottom",
-          legend.title = element_blank(),
-          axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
+    scale_colour_manual(values = palette) +
+    labs(x = "", y = "Oppervlakteaandeel soorbeschermingsmaatregelen") +
+    theme(legend.position = "",
+          legend.title = element_blank())
 p
 
 ggsave(here(media_folder, paste0("soortbeschermingsmaatregelen2_2018_2023.jpg")),
@@ -1276,7 +1280,6 @@ ggsave(here(media_folder, paste0("soortbeschermingsmaatregelen2_2018_2023.jpg"))
        width = 8,
        height = 6)
 ```
-
 
 ```{r}
 p <- mas_vogels %>%
