--- a/src/markdown/mas/dubbeltellingen.Rmd
+++ b/src/markdown/mas/dubbeltellingen.Rmd
@@ -2590,7 +2590,7 @@ p_corr <- dubbels_corr_df %>%
                 aes(y = Estimate, ymin = Q2.5, ymax = Q97.5),
                 stat = "identity") +
     coord_cartesian(xlim = c(0, NA), ylim = c(0, NA)) +
-    labs(y = "aantal soorten", x = "aantal waarnemingen")
+    labs(y = "Aantal soorten", x = "Aantal waarnemingen")
 p_corr
 ```
 
@@ -2690,11 +2690,11 @@ p_aantallen <- rbind.data.frame(soorten_prof$hypothesis,
   ggplot(aes(y = Estimate, x = status)) + 
     geom_jitter(data = plot_data_df, aes(x = status, y = n), 
                 col = "firebrick", width = 0.2, height = 0, alpha = 0.1) +
-    geom_point(size = 4) +
+    geom_point(size = 3) +
     geom_errorbar(aes(ymin = CI.Lower, ymax = CI.Upper), 
                   width = 0.2) +
     coord_cartesian(ylim = c(0, NA)) +
-    labs(x = "", y = "aantal") +
+    labs(x = "", y = "Aantal") +
     facet_grid(~cat)
 p_aantallen
 ```
@@ -2720,7 +2720,7 @@ dir.create(media_folder, FALSE)
 ```{r}
 p_aantallen2 <- p_aantallen
 
-ggsave(here(media_folder, "vergelijk_aantallen.jpg"),
+ggsave(here(media_folder, "vergelijk_aantallen.pdf"),
        p_aantallen2,
        dpi = 300,
        width = 8,
@@ -2736,10 +2736,9 @@ p_corr2 <- p_corr +
                                           color = "darkgrey"),
          legend.margin = margin(6, 6, 6, 6))
 
-ggsave(here(media_folder, "correlatie_aantallen.jpg"),
+ggsave(here(media_folder, "correlatie_aantallen.pdf"),
        p_corr2,
        dpi = 300,
        width = 8,
        height = 6)
 ```
-
